--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "dayjs": "^1.11.11",
@@ -51,6 +52,7 @@
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "tailwind-merge": "^2.3.0",
