--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-date-picker": "^11.0.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.23.0",
