--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "tailwind-merge": "^2.3.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
     "web-vitals": "^2.1.4"
   },
