--- a/components.json
+++ b/components.json
@@ -2,13 +2,13 @@
   "$schema": "https://ui.shadcn.com/schema.json",
   "style": "default",
   "rsc": false,
-  "tsx": false,
+  "tsx": true,
   "tailwind": {
-    "config": "./tailwind.config.js",
-    "css": "./index.css",
-    "baseColor": "stone",
+    "config": "tailwind.config.js",
+    "css": "../index.css",
+    "baseColor": "gray",
     "cssVariables": false,
-    "prefix": "y"
+    "prefix": ""
   },
   "aliases": {
     "components": "@/components",
