--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "server": "json-server --watch db.json",
-    "start": "react-scripts start",
+    "start": "set PORT=3001 && react-scripts start",
     "test": "react-scripts test"
   },
   "browserslist": {
@@ -37,15 +37,23 @@
     "@mui/material": "^5.15.17",
     "@mui/x-data-grid": "^7.3.2",
     "@mui/x-date-pickers": "^7.5.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.1.4",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-radio-group": "^1.2.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@shadcn/ui": "^0.0.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.11",
+    "lucide-react": "^0.414.0",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-date-picker": "^11.0.0",
@@ -54,15 +62,17 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.4.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "source-map-loader": "^5.0.0",
     "tailwindcss": "^3.4.3"
   }
 }
