--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "tailwind-merge": "^2.4.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
